[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = 'falcon-cache'
version = "0.2.0"
requires-python = '>=3.6'
dependencies = [
    "msgpack==1.0.5",
    "redis_helper @ git+https://github.com/metallerok/redis-helper@v0.0.1",
]

[project.optional-dependencies]
dev = [
    "redis",
    "falcon==3.1.1"
]
